[workspace]
members = ["shared", "shared_types"]
resolver = "1"

[workspace.package]
authors = ["Eric Watson"]
edition = "2021"
repository = "https://github.com/wasnotrice/crux_compose/"
license = "Apache-2.0"
keywords = ["crux", "crux_core", "cross-platform-ui", "ffi", "wasm"]
rust-version = "1.66"

[workspace.dependencies]
anyhow = "1.0.79"
crux_core = { git = "../crux/crux_core/"}
serde = { version = "1.0.196", features = ["derive"]}
